--- a/app/front/templates/index.html
+++ b/app/front/templates/index.html
@@ -12,9 +12,11 @@
 <div class="row">
   <div class="col">
     <a class="btn btn-primary" href="/marketplace">Create Marketplace</a>
-      <a class="btn btn-primary" href="/marketplace/list">List Marketplaces</a>
+    <a class="btn btn-primary" href="/marketplace/list">List Marketplaces</a>
     <a class="btn btn-primary" href="/product">Create Products</a>
     <a class="btn btn-primary" href="/product/list">List Products</a>
+    <a class="btn btn-primary" href="/seller/create">Create Seller</a>
+    <a class="btn btn-primary" href="/seller/list">List Seller</a>
   </div>
 </div>
 {% endblock content %}
