adicao de coloracao das linhas da tabela de lista de log

--- a/app/front/templates/list_log.html
+++ b/app/front/templates/list_log.html
@@ -8,7 +8,7 @@
     </tr>
     {% for log in log_list%}
     <tr>
-      <td>{{log}}</td>
+      <td style="background:{{log.color}}">{{log.text}}</td>
     </tr>
     {% endfor %}
   </table>
