Adição dos botões de categoria
Adição dos botões de categoria que eu deletei sem querer

--- a/app/front/templates/index.html
+++ b/app/front/templates/index.html
@@ -18,6 +18,9 @@
     <a class="btn btn-primary" href="/product">Create Products</a>
     <a class="btn btn-primary" href="/product/list">List Products</a>
     <br><br>
+    <a class="btn btn-primary" href="/category">Create Category</a>
+    <a class="btn btn-primary" href="/category/list">List Categories</a>
+    <br><br>
     <a class="btn btn-primary" href="/seller/create">Create Seller</a>
     <a class="btn btn-primary" href="/seller/list">List Seller</a>
     <br><br>
