--- a/app/front/templates/list_products.html
+++ b/app/front/templates/list_products.html
@@ -8,9 +8,9 @@
     </tr>
     {% for product in product_list%}
     <tr>
-      <td>{{product.name}}</td>
-      <td>{{product.description}}</td>
-      <td>{{ "R$%.2f"|format(product.price) }}</td>
+      <td>{{product[0]}}</td>
+      <td>{{product[1]}}</td>
+      <td>{{ "R$ %.2f"|format(product[2]) }}</td>
     </tr>
     {% endfor %}
   </table>
