--- a/app/front/templates/index.html
+++ b/app/front/templates/index.html
@@ -21,7 +21,7 @@
     <a class="btn btn-primary" href="/category">Create Category</a>
     <a class="btn btn-primary" href="/category/list">List Categories</a>
     <br><br>
-    <a class="btn btn-primary" href="/seller/create">Create Seller</a>
+    <a class="btn btn-primary" href="/seller">Create Seller</a>
     <a class="btn btn-primary" href="/seller/list">List Seller</a>
     <br><br>
     <a class="btn btn-primary" href="/log/list">List Log</a>
