Adicionando botões de voltar nas rotas

--- a/app/front/templates/new_seller.html
+++ b/app/front/templates/new_seller.html
@@ -6,6 +6,7 @@
         <input type="text" placeholder="Phone" class="form-control" name="phone" id="phone" />    
         <input type="text" placeholder="e-mail" class="form-control" name="email" id="email" />    
     <input id="submit" type="submit" class="btn btn-primary" value="Submit" />
+    <a class="btn btn-primary" href="/">Back</a>
     </div>
   </form>
   {% endblock %}
