--- a/app/front/templates/new_category.html
+++ b/app/front/templates/new_category.html
@@ -22,6 +22,7 @@
   </div>
   <div class="row">
     <input id="submit" type="submit" class="btn btn-primary" value="Submit" />
+    <a class="btn btn-primary" href="/">Back</a>
   </div>
 </form>
 {% endblock %}
