--- a/app/front/templates/list_categories.html
+++ b/app/front/templates/list_categories.html
@@ -3,13 +3,15 @@
 <h3>Categories</h3>
 <table style="width:100%">
   <tr>
+    <th>Id</th>
     <th>Nome</th>
     <th>Descrição</th>
   </tr>
-  {% for i in list%}
+  {% for category in list%}
   <tr>
-        <td>{{i[0]}}</td>
-        <td>{{i[1]}}</td>
+      <td>{{category.id}}</td>
+      <td>{{category.name}}</td>
+      <td>{{category.description}}</td>
   </tr>
   {% endfor %}
 </table>
