--- a/app/front/templates/list_marketplaces.html
+++ b/app/front/templates/list_marketplaces.html
@@ -3,13 +3,15 @@
 <h3>Marketplaces</h3>
 <table style="width:100%">
   <tr>
+    <th>Id</th>
     <th>Nome</th>
     <th>Descrição</th>
   </tr>
-  {% for i in list%}
+  {% for marktplaces in list%}
   <tr>
-        <td>{{i[0]}}</td>
-        <td>{{i[1]}}</td>
+        <td>{{marktplaces.id}}</td>
+        <td>{{marktplaces.name}}</td>
+        <td>{{marktplaces.description}}</td>
   </tr>
   {% endfor %}
 </table>
