--- a/app/front/templates/list_marketplaces.html
+++ b/app/front/templates/list_marketplaces.html
@@ -6,12 +6,14 @@
     <th>Id</th>
     <th>Nome</th>
     <th>Descrição</th>
+    <th></th>
   </tr>
   {% for marktplaces in list%}
   <tr>
         <td>{{marktplaces.id}}</td>
         <td>{{marktplaces.name}}</td>
         <td>{{marktplaces.description}}</td>
+        <td> <a href="/marketplace/update/form?id={{marktplaces.id}}&name={{marktplaces.name}}&description={{marktplaces.description}}"><i class="fas fa-pen" ></i></a> </td>
   </tr>
   {% endfor %}
 </table>
