Desenvolvido update e delete para product

--- a/app/front/templates/list_products.html
+++ b/app/front/templates/list_products.html
@@ -13,6 +13,16 @@
       <td>{{product.name}}</td>
       <td>{{product.description}}</td>
       <td>{{ "R$ %.2f"|format(product.price|float) }}</td>
+      <td>
+        <a href="/product/update?id={{ product.id }}&name={{ product.name }}&description={{ product.description }}&price={{ product.price }}">
+          <i class="fas fa-pen"></i>
+        </a>
+      </td>
+      <td>
+        <a href="/product/delete?id={{ product.id }}">
+          <i class="fa fa-trash"></i>
+        </a>
+      </td>
     </tr>
     {% endfor %}
   </table>
