--- a/app/front/templates/list_marketplaces.html
+++ b/app/front/templates/list_marketplaces.html
@@ -14,7 +14,7 @@
         <td>{{marktplaces.id}}</td>
         <td>{{marktplaces.name}}</td>
         <td>{{marktplaces.description}}</td>
-        <td> <a href="/marketplace/update/form?id={{marktplaces.id}}&name={{marktplaces.name}}&description={{marktplaces.description}}"><i class="fas fa-pen" ></i></a> </td>
+        <td> <a href="/marketplace/update/form?id={{marktplaces.id}}"><i class="fas fa-pen" ></i></a> </td>
         <td> <a href="/marketplace/delete?id={{marktplaces.id}}"><i class="fa fa-trash" ></i></a> </td>
   </tr>
   {% endfor %}
