--- a/app/front/templates/list_products.html
+++ b/app/front/templates/list_products.html
@@ -14,7 +14,7 @@
       <td>{{product.description}}</td>
       <td>{{ "R$ %.2f"|format(product.price|float) }}</td>
       <td>
-        <a href="/product/update?id={{ product.id }}&name={{ product.name }}&description={{ product.description }}&price={{ product.price }}">
+        <a href="/product/update?id={{ product.id }}">
           <i class="fas fa-pen"></i>
         </a>
       </td>
