--- a/app/front/templates/list_sellers.html
+++ b/app/front/templates/list_sellers.html
@@ -15,9 +15,9 @@
     <tr>
       <td>{{ seller.id }}</td>
       <td>{{ seller.name }}</td>
-      <td>{{ seller.phone }}</td>
-      <td>{{ seller.mail }}</td>
-      <td> <a href="/seller/update/form?id={{seller.id}}&name={{seller.name}}&phone={{seller.phone}}&mail={{seller.mail}}"><i class="fas fa-pen" ></i></a> </td>
+      <td>{{ seller.telephone }}</td>
+      <td>{{ seller.email }}</td>
+      <td> <a href="/seller/update/form?id={{seller.id}}"><i class="fas fa-pen" ></i></a> </td>
       <td> <a href="/seller/delete?id={{seller.id}}"><i class="fa fa-trash" ></i></a> </td>
     </tr>
     {% endfor %}
