--- a/app/front/templates/update_product.html
+++ b/app/front/templates/update_product.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %}
-<h1>New Product</h1>
+<h1>Update Product</h1>
 <form action="/product/updated" method="get">
   <div class="row">
     <div class="col-sm mb-4">
