--- a/app/front/templates/list_categories.html
+++ b/app/front/templates/list_categories.html
@@ -13,7 +13,7 @@
       <td>{{category.name}}</td>
       <td>{{category.description}}</td>
       <td>
-        <a href="/category/update?id={{ category.id }}&name={{ category.name }}&description={{ category.description }}">
+        <a href="/category/update?id={{ category.id }}">
           <i class="fas fa-pen"></i>
         </a>
         
