--- a/app/front/templates/update_seller.html
+++ b/app/front/templates/update_seller.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %} {% block content %}
 <h1>Update Seller</h1>
-<form action="/seller/update" method="get">
+<form action="/seller/update" method="GET">
     <div class="row">
         <input type="hidden" class="form-control" name="id" id="id" value="{{seller.id}}"/>
         <input type="text" placeholder="Name" class="form-control" name="name" id="name" value="{{seller.name}}"/>
-        <input type="text" placeholder="Phone" class="form-control" name="phone" id="phone" value="{{seller.phone}}"/>    
-        <input type="text" placeholder="e-mail" class="form-control" name="email" id="email" value="{{seller.mail}}"/>
+        <input type="text" placeholder="Phone" class="form-control" name="telephone" id="telephone" value="{{seller.telephone}}"/>    
+        <input type="text" placeholder="e-mail" class="form-control" name="email" id="email" value="{{seller.email}}"/>
     <input id="submit" type="submit" class="btn btn-primary" value="Submit" />
     <a class="btn btn-primary" href="/">Back</a>
     </div>
