--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
     <title>Sellers Alchemy</title>
     <script src="{{ url_for('static', filename='phone_mask.js') }}"></script>
 </head>
