Atualiza rotas e lógica de listagem e criação

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -12,7 +12,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="/create_seller">Criar Seller</a>
+              <a class="nav-link" href="/sellers/create">Criar Seller</a>
               <a class="nav-link" href="/sellers">Listar Sellers</a>
             </div>
           </div>
