MVP of web interface

--- a/frontend/app/templates/seller.html
+++ b/frontend/app/templates/seller.html
@@ -1,6 +1,7 @@
 {% extends 'template.html' %}
 {% block body %}
 <h2 class="title_product">List Sellers</h2>
+<a href="/sellers/create">Create new</a>
 <table style="width:100%">
 
     <tr>
