--- a/frontend/app/templates/seller_form.html
+++ b/frontend/app/templates/seller_form.html
@@ -20,7 +20,7 @@
 </form>
 {% else %}
 <h1>'Create Seller'</h1>
-<form action="/sellers">
+<form action="/sellers/create">
     <label>
         Fullname:
     </label>
