--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}{% endblock %}
+{% block body %}
+    <form>
+        <button formaction="/product">product</button>
+        <button formaction="/seller">seller</button>
+        <button formaction="/marketplace">marketplace</button>
+        <button formaction="/category">category</button>
+    </form>
+{% endblock %}
